--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "consign": "^0.1.6",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.1.7-alpha.3",
     "google-auth-library": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.7",
